# Gklee

./: .gitignore  .travis.yml  BuildGklee  CMakeLists.txt  Dockerfile  README  README.md  README_EMACS  buildCscope  clang.patch  cmakeRtags  cscope.files  gklee-mode-update.el  gklee-mode.el  gklee-mode.el.new  runRTags  setupPaths  setup_cscope
Gklee/: CMakeLists.txt  Makefile.FLA  Makefile.rules
Gklee/CUDA/Benchmarks/: gklee.benchmarks.results.txt
Gklee/CUDA/Benchmarks/IntrinsicTest/Atomic/: AtomicAdd.cu  AtomicComp.cu  AtomicSub.cu
Gklee/CUDA/Benchmarks/IntrinsicTest/BitWise/: bitwise.cu
Gklee/CUDA/Benchmarks/IntrinsicTest/Mul/: mul.cu
Gklee/CUDA/Benchmarks/IntrinsicTest/Triangle/: Triangle.cu
Gklee/CUDA/Benchmarks/Misc_Test/Deadlock/: Deadlock.cu  README
Gklee/CUDA/Benchmarks/Misc_Test/Nathan/: README  compact.cu
Gklee/CUDA/Benchmarks/Misc_Test/Presentation/: pre.cu
Gklee/CUDA/Benchmarks/Misc_Test/Simple/: simple.cu  wfchiang.cu
Gklee/CUDA/Benchmarks/Misc_Test/Tyler/: gpu.cu
Gklee/CUDA/transpose+mult/: transpose_multiply_kernels.C  transpose_multiply_kernels_2k.C  transpose_multiply_kernels_buggy.C
Gklee/PThread/: Makefile  klee-last  t1  t1.c
Gklee/PThread/klee-out-0/: assembly.ll  info  messages.txt  run.istats  run.stats  test000001.external.err  test000001.ktest  test000001.pc  warnings.txt
Gklee/PThread/klee-out-1/: assembly.ll  info  messages.txt  run.stats
Gklee/PThread/klee-out-2/: assembly.ll  info  messages.txt  run.stats
Gklee/examples/: README
Gklee/examples/simple/: test.cu
Gklee/examples/sphere_barano/: test.cu
Gklee/include/cuda/: cudaVDPAU.h  cuda_vdpau_interop.h  device_launch_parameters.h  host_defines.h  math_functions.h  nppversion.h  nvToolsExtCudaRt.h  nvToolsExtMeta.h  sm_32_intrinsics.h  surface_indirect_functions.h
Gklee/include/expr/: Parser.h
Gklee/include/klee/: Constraints.h  ExecutionState.h  Expr.h  ExprBuilder.h  FlowGraph.h  GPUConfig.h  IncompleteSolver.h  Interpreter.h  Solver.h  SolverImpl.h  Statistics.h  gklee.h  hutil.h  klee.h  logging.h
Gklee/include/klee/Config/: CMakeLists.txt  config.h.in
Gklee/include/klee/FLA/: FLA_klee.h
Gklee/include/klee/util/: Assignment.h  ExprEvaluator.h  ExprHashMap.h  ExprPPrinter.h  ExprRangeEvaluator.h  ExprSMTLIBLetPrinter.h  ExprSMTLIBPrinter.h  ExprUtil.h  ExprVisitor.h  GetElementPtrTypeIterator.h  Ref.h
Gklee/install/include/klee/: Constraints.h  ExecutionState.h  Expr.h  FLA_klee.cpp  GPUConfig.h  Interpreter.h  Solver.h  cutil.h
Gklee/lib/: CMakeLists.txt  TAGS
Gklee/lib/Basic/: CMakeLists.txt
Gklee/lib/Core/: AddressSpace.cpp  AddressSpace.h  BCCoverage.cpp  BCCoverage.h  CExecutor.cpp  CMakeLists.txt  CUDA.cpp  CUDA.h  CUDAIntrinsics.h  CallPathManager.cpp  Context.cpp  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorCUDAAtomic.cpp  ExecutorCUDAIntrinsic.cpp  ExecutorTimers.cpp  ExecutorUtil.cpp  ExternalDispatcher.cpp  HierAddressSpace.cpp  HierAddressSpacePerformanceDefect.cpp  ImpliedValue.cpp  ImpliedValue.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  PTree.h  ParametricTree.cpp  ParametricTree.h  PathReduction.cpp  PathReduction.h  Searcher.cpp  SeedInfo.cpp  SeedInfo.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  SymHierAddressSpace.cpp  TimingSolver.cpp  (+1 more)
Gklee/lib/Core/Release+Asserts/: .dir  AddressSpace.d  BCCoverage.d  CExecutor.d  CUDA.d  CallPathManager.d  Common.d  Context.d  CoreStats.d  ExecutionState.d  Executor.d  ExecutorCUDAAtomic.d  ExecutorCUDAIntrinsic.d  ExecutorTimers.d  ExecutorUtil.d  ExternalDispatcher.d  HierAddressSpace.d  HierAddressSpacePerformanceDefect.d  ImpliedValue.d  Memory.d  MemoryManager.d  PTree.d  ParametricTree.d  PathReduction.d  Searcher.d  SeedInfo.d  SpecialFunctionHandler.d  StatsTracker.d  SymHierAddressSpace.d  TimingSolver.d  UserSearcher.d
Gklee/lib/Expr/: CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBLetPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  Parser.cpp  Updates.cpp
Gklee/lib/FLA/: Makefile  StrConstraint.bak  StrConstraint.h  StrExpr.bak  StrExpr.cpp  StrExpr.h  StringHandler.cpp  StringHandler.h  StringSolver.cpp  StringSolver.h
Gklee/lib/Module/: CMakeLists.txt  Checks.cpp  InstructionInfoTable.cpp  IntrinsicCleaner.cpp  KModule.cpp  LowerSwitch.cpp  ModuleUtil.cpp  Optimize.cpp  Passes.h  RaiseAsm.cpp
Gklee/lib/SMT/: SMTParser.cpp
Gklee/lib/Solver/: CMakeLists.txt  CachingSolver.cpp  CexCachingSolver.cpp  FastCexSolver.cpp  IncompleteSolver.cpp  IndependentSolver.cpp  PCLoggingSolver.cpp  QueryLoggingSolver.cpp  QueryLoggingSolver.h  STPBuilder.cpp  STPBuilder.h  Solver.cpp  TAGS
Gklee/lib/Support/: CMakeLists.txt  FlowGraph.cpp  logging.cpp
Gklee/runtime/: CMakeLists.txt  Makefile
Gklee/runtime/CudaRuntime/: CMakeLists.txt  Makefile  cudaArithIntrinsic.c  cudaDeviceManage.c  cudaErrorHandling.c  cudaEventManage.c  cudaExecutionControl.c  cudaMemManage.cpp  cudaStreamManage.c  cudaTextureManage.c  cudaThreadManage.c
Gklee/runtime/Intrinsic/: CMakeLists.txt  gen1  klee_div_zero_check  klee_div_zero_check.bc  klee_div_zero_check.ll  klee_int  klee_int.bc  klee_int.ll  klee_range  klee_range.bc  klee_range.ll  memcpy  memcpy.bc  memcpy.ll  memmove  memmove.bc  memmove.c  memmove.ll  mempcpy  mempcpy.bc  mempcpy.ll  memset  memset.bc  memset.ll
Gklee/runtime/POSIX/: CMakeLists.txt  fd_32  fd_32.bc  fd_32.ll  fd_64  fd_64.bc  fd_64.c  fd_64.ll  fd_init  fd_init.bc  fd_init.ll  illegal  illegal.bc  illegal.ll  klee_init_env  klee_init_env.bc  klee_init_env.ll  misc  misc.bc  misc.ll  selinux  selinux.ll  stubs.c
Gklee/runtime/Runtest/: CMakeLists.txt  intrinsics.c
Gklee/runtime/klee-libc/: strtol.c
Gklee/stp/: stp-install
Gklee/stp/scripts/: Makefile.common
Gklee/tools/: CMakeLists.txt  TAGS
Gklee/tools/gen-random-bout/: CMakeLists.txt
Gklee/tools/kleaver/: CMakeLists.txt  main.cpp
Gklee/tools/klee/: CMakeLists.txt  main.cpp
Gklee/tools/klee-replay/: CMakeLists.txt  klee-replay.c
debug/: gdbinfo
doc/: Doxyfile.in
(+157 files in other folders)
